--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,15 @@ subprojects {
 
 
 	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+		implementation 'org.springframework.boot:spring-boot-starter'
 
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
 
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testCompileOnly 'org.projectlombok:lombok'
+
 	}
 
 	test {
@@ -48,11 +52,17 @@ project(':boot') {
 	}
 	bootJar { enabled = true }
 	jar { enabled = true }
+
+	test {
+		useJUnitPlatform()
+	}
 }
 
 project(':presentation') {
 	dependencies {
 		implementation project(':application')
+		implementation project(':domain')
+		testImplementation project(':boot')
 	}
 	bootJar { enabled = false }
 	jar { enabled = true }
@@ -68,7 +78,7 @@ project(':application') {
 
 project(':domain') {
 	dependencies {
-		implementation project(':infrastructure')
+		testImplementation project(':boot')
 	}
 	bootJar { enabled = false }
 	jar { enabled = true }
@@ -76,6 +86,8 @@ project(':domain') {
 
 project(':infrastructure') {
 	dependencies {
+		implementation project(':domain')
+		testImplementation project(':boot')
 	}
 	bootJar { enabled = false }
 	jar { enabled = true }
