--- a/src/boot/build.gradle
+++ b/src/boot/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
 }
