H2 DB 파일로 저장하도록 설정

--- a/src/boot/src/main/resources/application.yaml
+++ b/src/boot/src/main/resources/application.yaml
@@ -4,22 +4,27 @@ logging:
     root: info
 
 
+
 # H2
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2
 
 # Datasource
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:tcp://localhost/~/h2/db/rs
     username: sa
     password:
 
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: create
+      # create - 시작 시 DB 초기화
+      # update - 수정사항 반영
     properties:
       hibernate:
         format_sql: true
