레이어드 아키텍처 수정

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ project(':presentation') {
 	dependencies {
 		implementation project(':application')
 		implementation project(':domain')
+
 		testImplementation project(':boot')
 	}
 	bootJar { enabled = false }
@@ -76,7 +77,6 @@ project(':application') {
 
 project(':domain') {
 	dependencies {
-		implementation project(':infrastructure')
 		testImplementation project(':boot')
 	}
 	bootJar { enabled = false }
@@ -85,6 +85,7 @@ project(':domain') {
 
 project(':infrastructure') {
 	dependencies {
+		implementation project(':domain')
 		testImplementation project(':boot')
 	}
 	bootJar { enabled = false }
