--- a/src/boot/src/main/resources/application.yaml
+++ b/src/boot/src/main/resources/application.yaml
@@ -3,16 +3,8 @@ logging:
   level:
     root: info
 
-
-
-# H2
 spring:
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2
-
-# Datasource
+# H2 Datasource
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:tcp://localhost/~/h2/db/rs
@@ -23,8 +15,6 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-      # create - 시작 시 DB 초기화
-      # update - 수정사항 반영
     properties:
       hibernate:
         format_sql: true
